#在项目的根目录中创建 CmakeList.txt


#可以查找链接库的 CMakeList.txt
PROJECT(apue_chap1)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${CMAKE_SOURCE_DIR}/cmake/modules) 




FIND_PACKAGE(libapue REQUIRED)
MARK_AS_ADVANCED(
    LIBAPUE_INCLUDE_DIR
    LIBAPUE_LIBRARIES
)

IF (LIBAPUE_INCLUDE_DIR AND LIBAPUE_LIBRARIES)
    MESSAGE(STATUS "Found libapue libraries")
    INCLUDE_DIRECTORIES(${LIBAPUE_INCLUDE_DIR})
    MESSAGE( ${LIBAPUE_LIBRARIES} )
    # TARGET_LINK_LIBRARIES(main ${LIBAPUE_LIBRARIES}
    LINK_LIBRARIES(${LIBAPUE_LIBRARIES})
ENDIF (LIBAPUE_INCLUDE_DIR AND LIBAPUE_LIBRARIES)

ADD_EXECUTABLE(1-1 1-1.c)
ADD_EXECUTABLE(1-2 1-2.c)
ADD_EXECUTABLE(1-3 1-3.c)
ADD_EXECUTABLE(1-4 1-4.c)
ADD_EXECUTABLE(1-5 1-5.c)
ADD_EXECUTABLE(1-6 1-6.c)
ADD_EXECUTABLE(1-7 1-7.c)
ADD_EXECUTABLE(1-8 1-8.c)
#TARGET_LINK_LIBRARIES(apue)